// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/gradle-wrapper/extract extractPackageFile() extracts all version line 1`] = `
Array [
  Object {
    "currentValue": "4.10.3",
    "datasource": "gradle-version",
    "depName": "gradle",
    "depType": "gradle-wrapper",
    "managerData": Object {
      "checksumLineNumber": 6,
      "gradleWrapperType": "all",
      "lineNumber": 5,
    },
    "versioning": "semver",
  },
]
`;

exports[`lib/manager/gradle-wrapper/extract extractPackageFile() extracts bin version line 1`] = `
Array [
  Object {
    "currentValue": "4.8.0",
    "datasource": "gradle-version",
    "depName": "gradle",
    "depType": "gradle-wrapper",
    "managerData": Object {
      "gradleWrapperType": "bin",
      "lineNumber": 4,
    },
    "versioning": "semver",
  },
]
`;

exports[`lib/manager/gradle-wrapper/extract extractPackageFile() handles whitespace 1`] = `
Array [
  Object {
    "currentValue": "4.10.3",
    "datasource": "gradle-version",
    "depName": "gradle",
    "depType": "gradle-wrapper",
    "managerData": Object {
      "checksumLineNumber": 6,
      "gradleWrapperType": "all",
      "lineNumber": 5,
    },
    "versioning": "semver",
  },
]
`;
